RESOLVED FIXED18939
In some float situations, the original layout is wrong and only corrects itself on repaint
https://bugs.webkit.org/show_bug.cgi?id=18939
Summary In some float situations, the original layout is wrong and only corrects itse...
Ain Tohvri
Reported 2008-05-08 04:16:19 PDT
1. Open the attached HTML test case; 2. Click on the 'Age' label; 3. The label and the select input are being moved under the 'Name' input. HTML/CSS is W3C-valid. Works properly in Safari 3.1.1 (Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_5_2; et-ee) AppleWebKit/525.18 (KHTML, like Gecko) Version/3.1.1 Safari/525.18) and Fx 3 (Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b5) Gecko/2008032619 Firefox/3.0b5).
Attachments
HTML test case (1.64 KB, text/html)
2008-05-08 04:17 PDT, Ain Tohvri
no flags
Form before the click (10.62 KB, image/png)
2008-05-08 04:19 PDT, Ain Tohvri
no flags
Form after the click (10.75 KB, image/png)
2008-05-08 04:20 PDT, Ain Tohvri
no flags
Patch (5.71 KB, patch)
2012-10-08 10:54 PDT, Robert Hogan
no flags
Patch (5.72 KB, patch)
2012-10-17 10:30 PDT, Robert Hogan
no flags
Patch (5.73 KB, patch)
2012-10-17 10:59 PDT, Robert Hogan
no flags
Patch (5.73 KB, patch)
2012-10-17 13:55 PDT, Robert Hogan
no flags
Patch (5.59 KB, patch)
2012-10-18 13:06 PDT, Robert Hogan
no flags
Patch (5.28 KB, patch)
2012-10-18 14:00 PDT, Robert Hogan
no flags
Ain Tohvri
Comment 1 2008-05-08 04:17:09 PDT
Created attachment 21012 [details] HTML test case
Ain Tohvri
Comment 2 2008-05-08 04:19:49 PDT
Created attachment 21013 [details] Form before the click A form screen before the click on a label
Ain Tohvri
Comment 3 2008-05-08 04:20:25 PDT
Created attachment 21014 [details] Form after the click A form screen after the click on a label
Ain Tohvri
Comment 4 2008-05-08 06:09:46 PDT
Issue looks to rely in label padding. With padding removed it works.
Tab Atkins
Comment 5 2011-10-20 05:11:54 PDT
The behavior that you get after clicking the label is correct - that's the layout that you *should* have, given the particular size and positioning of floats in your testcase. The fact that we start out with a different layout (the one you want) is a mistake. Clicking the label just triggers a repaint which then, for some reason, makes it lay out correctly. I'm marking this as a valid bug, but altering the title to accurately reflect what's wrong.
Robert Hogan
Comment 6 2012-10-03 12:32:45 PDT
*** Bug 53387 has been marked as a duplicate of this bug. ***
Robert Hogan
Comment 7 2012-10-08 10:54:18 PDT
Levi Weintraub
Comment 8 2012-10-08 12:45:46 PDT
Comment on attachment 167563 [details] Patch LGTM.
Build Bot
Comment 9 2012-10-08 18:45:44 PDT
Comment on attachment 167563 [details] Patch Attachment 167563 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/14217546 New failing tests: fast/block/br-with-clearance-after-collapsing-space.html
Robert Hogan
Comment 10 2012-10-17 10:30:36 PDT
Robert Hogan
Comment 11 2012-10-17 10:59:19 PDT
Robert Hogan
Comment 12 2012-10-17 13:55:29 PDT
Build Bot
Comment 13 2012-10-17 15:52:45 PDT
Comment on attachment 169252 [details] Patch Attachment 169252 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/14394720 New failing tests: fast/block/br-with-clearance-after-collapsing-space.html
Levi Weintraub
Comment 14 2012-10-18 12:28:42 PDT
Comment on attachment 169252 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169252&action=review Please don't make the bots red. > LayoutTests/fast/block/br-with-clearance-after-collapsing-space.html:5 > + <!-- > + Test created by Krinkle <krinklemail (at) gmail (d0t) com> > + --> Is this part really necessary? > LayoutTests/fast/block/br-with-clearance-after-collapsing-space.html:22 > + setTimeout("testRunner.notifyDone()", 0); This should be gated on if testRunner is defined.
Robert Hogan
Comment 15 2012-10-18 13:06:39 PDT
Robert Hogan
Comment 16 2012-10-18 14:00:17 PDT
Robert Hogan
Comment 17 2012-10-21 03:29:54 PDT
Note You need to log in before you can comment on or make changes to this bug.